--- a/ebusiness-manager-web/src/main/resources/templates/attrListPage.html
+++ b/ebusiness-manager-web/src/main/resources/templates/attrListPage.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-    <table title="属性列表" class="easyui-datagrid" style="width:100%;height:100%"
+    <table id="dg" title="属性列表" class="easyui-datagrid" style="width:100%;height:100%"
        data-options="fitColumns:true,singleSelect:true,toolbar:'#tb'">
     <thead>
     <tr>
@@ -16,9 +16,9 @@
 </table>
 
 <div id="tb">
-    <a href="#" class="easyui-linkbutton" data-options="iconCls:'icon-add',plain:true">添加</a>
-    <a href="#" class="easyui-linkbutton" data-options="iconCls:'icon-edit',plain:true">编辑</a>
-    <a href="#" class="easyui-linkbutton" data-options="iconCls:'icon-remove',plain:true">删除</a>
+    <a href="javascript:addAttr()" class="easyui-linkbutton" data-options="iconCls:'icon-add',plain:true">添加</a>
+    <a href="javascript:editAttr()" class="easyui-linkbutton" data-options="iconCls:'icon-edit',plain:true">编辑</a>
+    <a href="javascript:removeAttr()" class="easyui-linkbutton" data-options="iconCls:'icon-remove',plain:true">删除</a>
     <div>
         一级分类：<input id="ctg1ForAttrList" class="easyui-combobox" data-options="valueField:'id',textField:'name',url:'getBaseCatalog1List',
                 onSelect: function(rec){
@@ -31,9 +31,66 @@
                     $('#ctg3ForAttrList').combobox('reload',url);
                     }" />
         三级分类：<input id="ctg3ForAttrList" class="easyui-combobox" data-options="valueField:'id',textField:'name'" />
+        <a href="javascript:reloadAttrList()" class="easyui-linkbutton" data-options="iconCls:'icon-search'" style="width:120px">
+            刷新属性列表
+        </a>
     </div>
 </div>
+    <div th:include="attrInfoPage"></div>
 <script language="JavaScript">
+    function reloadAttrList() {
+        var ctg3Id =  $("#ctg3ForAttrList").combobox("getValue");
+
+        if(ctg3Id){
+            $("#dg").datagrid({
+                url:"getBaseAttrInfo?id="+ctg3Id
+            });
+        }else{
+            alert("请选择三级分类id");
+        }
+    }
+    function addAttr(){
+        var ctg3Id = $("#ctg3ForAttrList").combobox("getValue");
+        if(ctg3Id){
+            $("#dlg").dialog("open");
+            initAttrValueDatagrid();
+        }else{
+            alert("请选择三级分类");
+        }
+    }
+    function editAttr(){
+        var ctg3Id = $("#ctg3ForAttrList").combobox("getValue");
+        if(ctg3Id){
+            $("#dlg").dialog("open");
+
+            var attrInfo = $("#dg").datagrid("getSelected");
+            initAttrValueDatagrid(attrInfo);
+        }else{
+            alert("请选择三级分类");
+        }
+    }
+    function removeAttr(){
+        var ctg3Id = $("#ctg3ForAttrList").combobox("getValue");
+        var attrInfo = $("#dg").datagrid("getSelected");
+        var id = attrInfo.id;
+        var dataJson = {
+            id:id
+        };
+        if(id){
+            $.post("removeAttrInfo",dataJson,function(data){
+                if(data="success"){
+                    alert("success");
+                    $("#dg").reload("reload","getBaseAttrInfo?id="+ctg3Id);
+                }else{
+                    alert(data);
+                }
+            });
+
+
+        }else{
+            alert("请选择属性");
+        }
+    }
 
 </script>
 </body>
