--- a/ebusiness-manager-web/src/main/resources/templates/index.html
+++ b/ebusiness-manager-web/src/main/resources/templates/index.html
@@ -5,12 +5,12 @@
     <title>Title</title>
     <link rel="stylesheet" type="text/css" href="/easyui/themes/default/easyui.css">
     <link rel="stylesheet" type="text/css" href="/easyui/themes/icon.css">
-    <link rel="stylesheet" type="text/css" href="/easyui/demo.css">
     <script type="text/javascript" src="/easyui/jquery.min.js"></script>
     <script type="text/javascript" src="/easyui/jquery.easyui.min.js"></script>
+    <script type="text/javascript" src="/easyui/jquery.easyui.mobile.js"></script>
 </head>
 <body class="easyui-layout">
-    <div data-options="region:'north',border:false" style="font-size:20%;height:60px;background: #B3DFDA;padding: 10px">
+    <div data-options="region:'north',border:false" style="font-size: 40px;height:60px;background: #B3DFDA;padding: 10px">
         后台管理系统
     </div>
 
