--- a/ebusiness-manager-web/src/main/resources/templates/attrInfoPage.html
+++ b/ebusiness-manager-web/src/main/resources/templates/attrInfoPage.html
@@ -13,15 +13,16 @@
         <table id="dg_av" class="easyui-datagrid" title="属性值列表"></table>
     </div>
     <div id="bb">
-        <a href="javascript:saveOrUpdateAttr()" class="easyui-linkbutton">保存</a>
+        <a id="commitBtn" href="#" class="easyui-linkbutton">保存</a>
         <a href="#" class="easyui-linkbutton">关闭</a>
     </div>
 
 <script language="JavaScript">
-    function saveOrUpdateAttr(){
+    function updateAttr(){
         var catalog3Id = $("#ctg3ForAttrList").combobox("getValue");
         var attrId = $("#dg").datagrid("getSelected").id;
         var attrName = $("#attrName").val();
+
         var attrInfo = {
             id:attrId,
             attrName:attrName,
@@ -36,68 +37,105 @@
 
             }
         });
-        if(attrId){
-            $.post("/updateAttrInfo",attrInfo,function(data){
-                alert(data);
-                $("#dlg").dialog("close");
-                $("#dg").reload("reload","getBaseAttrInfo?id="+catalog3Id);
-            });
-        }else{
-            $.post("/saveAttrInfo",attrInfo,function(data){
-                alert(data);
-                $("#dlg").dialog("close");
-                $("#dg").reload("reload","getBaseAttrInfo?id="+catalog3Id);
-            });
-        }
-
+        $.post("/updateAttrInfo",attrInfo,function(data){
+            alert(data);
+            $("#dlg").dialog("close");
+            reloadAttrList();
+        });
     }
 
-    function initAttrValueDatagrid(attrInfo){
+    function saveAttr(){
+        var catalog3Id = $("#ctg3ForAttrList").combobox("getValue");
+        var attrName = $("#attrName").val();
+
+        var attrInfo = {
+            attrName:attrName,
+            catalog3Id:catalog3Id
+        };
+
+        var rows =  $("#dg_av").datagrid("getRows");
+        $(rows).each(function(i,json){
+            if(json.valueName){
+                attrInfo["attrValueList["+i+"].valueName"] = json.valueName;
+            }else{
+
+            }
+        });
+        $.post("/saveAttrInfo",attrInfo,function(data){
+            alert(data);
+            $("#dlg").dialog("close");
+            reloadAttrList();
+        });
+    }
+
+    function initAttrValueDatagrid(attrInfo) {
+
+
         d = $("#dg_av").datagrid({
-            columns:[[
-                {field:'id',title:'编号',width:100},
-                {field:'valueName',title:'属性名',width:300,
-                    editor:{
-                        type: 'validatebox',options: { required:true }
+            columns: [[
+                {field: 'id', title: '编号', width: 100},
+                {
+                    field: 'valueName', title: '属性名', width: 300,
+                    editor: {
+                        type: 'validatebox', options: {required: true}
                     }
                 }
             ]],
-            toolbar:[{
+            toolbar: [{
                 iconCls: 'icon-add',
-                text:"添加",
-                handler: function(){
+                text: "添加",
+                handler: function () {
                     //新增一行
-                    $("#dg_av").datagrid("appendRow",{
-                        id:"",
-                        valueName:""
+                    $("#dg_av").datagrid("appendRow", {
+                        id: "",
+                        valueName: ""
                     });
                 }
-            },'-',{
+            }, '-', {
                 iconCls: 'icon-remove',
                 text: "删除",
-                handler: function(){
+                handler: function () {
                     //获取选中的行
                     var dgav = $("#dg_av").datagrid("getSelected");
                     //获取选中行的行号
-                    var rowNum = $("#dg_av").datagrid("getRowIndex",dgav);
+                    var rowNum = $("#dg_av").datagrid("getRowIndex", dgav);
                     //根据行号删除
-                    $("#dg_av").datagrid("deleteRow",rowNum);
+                    $("#dg_av").datagrid("deleteRow", rowNum);
                 }
             }],
-            onDblClickRow: function (rowIndex,rowData) {
+            onDblClickRow: function (rowIndex, rowData) {
                 //双击开启编辑行
-                d.datagrid("beginEdit",rowIndex);
+                d.datagrid("beginEdit", rowIndex);
                 //当失去焦点时，退出编辑状态
                 var valueName = rowData.valueName;
-                $("input.datagrid-editable-input").val(valueName).bind("blur",function(evt){
-                   d.datagrid('endEdit',rowIndex);
+                $("input.datagrid-editable-input").val(valueName).bind("blur", function (evt) {
+                    d.datagrid('endEdit', rowIndex);
                 });
             }
         });
-        if(attrInfo){
+        if (attrInfo == undefined) {
+            $("#commitBtn").attr("href", "javascript:saveAttr()");
+        } else {
+            $("#commitBtn").attr("href", "javascript:updateAttr()");
+        }
+        //根据行号删除
+        $("#dg_av").datagrid("loadData",[]);
+
+        if(attrInfo != undefined){
             // 给attrName赋值
             $("#attrName").textbox("setText",attrInfo.attrName);
             // 给属性值列表赋值
+            var attrInfoIdJson = {
+                attrId:attrInfo.id
+            };
+            $.get("getAttrValueList",attrInfoIdJson,function(valueList) {
+                $.each(valueList, function (i, value) {
+                    $("#dg_av").datagrid("appendRow", {
+                        id: value.id,
+                        valueName: value.valueName
+                    });
+                });
+            });
         }
     }
 </script>
