--- a/ebusiness-manager-web/src/main/resources/templates/spuInfoPage.html
+++ b/ebusiness-manager-web/src/main/resources/templates/spuInfoPage.html
@@ -27,7 +27,7 @@
         <!----------------图片列表工具栏----------------------->
         <div id="spuImgTootbar" style="padding:5px;height:auto"  >
             <div style="margin-bottom:5px">
-                <a href="#" id="spuImgAdd" class="easyui-linkbutton" iconCls="icon-add" plain="true">添加图片</a>
+                <a href="#" id="spuImgAdd" class="easyui-linkbutton" style="width: 200px"  plain="true"></a>
                 <a href="#" id="spuImgUploadBtn" class="easyui-linkbutton" iconCls="icon-save" plain="true" >图片上传</a>
                 <a href="#" class="easyui-linkbutton" iconCls="icon-remove" plain="true">删除</a>
             </div>
@@ -74,7 +74,6 @@
             // 封装销售属性
             spuInfo["spuSaleAttrList["+i+"].saleAttrId"]=attr.saleAttrId;
             spuInfo["spuSaleAttrList["+i+"].saleAttrName"]=attr.saleAttrName;
-            //封装图片属性
 
             // 封装销售属性值
             var attrValueRows = attr.spuSaleAttrValueJson.rows;
@@ -82,6 +81,13 @@
                 spuInfo["spuSaleAttrList["+i+"].spuSaleAttrValueList["+j+"].saleAttrId"] = attr.saleAttrId;
                 spuInfo["spuSaleAttrList["+i+"].spuSaleAttrValueList["+j+"].saleAttrValueName"] = attrValue.saleAttrValueName;
             })
+        });
+        var imgRows = $("#spuImgDg").datagrid("getRows");
+        $(imgRows).each(function(i,attr){
+            //封装图片属性
+            spuInfo["spuImageList["+i+"].spuId"]=attr.fileId;
+            spuInfo["spuImageList["+i+"].imgName"]=attr.imgName;
+            spuInfo["spuImageList["+i+"].imgUrl"]=attr.imgUrl;
         });
 
 
@@ -99,23 +105,118 @@
     function initSpuInfoDlg() {
         // 初始化图片列表
         initSpuImgListDatagrid();
+        // 初始化上传控件插件(webuploader)
+        initUploader();
         // 初始化销售属性
         initSpuSaleAttrListDatagrid();
     }
 
-
-    function initSpuImgListDatagrid() {
-
-        $("#spuImgDg").datagrid({
-            columns:[[
-                {field:'id',title:'文件编号',width:100},
-                {field:'imgName',title:'图片简称',width:100},
-                {field:'process',title:'上传进度',width:100,align:'right'},
-                {field:'processStatus',title:'上传状态',width:100,align:'right'},
-                {field:'imgUrl',title:'',width:100,align:'right',hidden:true}
-            ]]
+    function initUploader(){
+        var spuImgDg = $("#spuImgDg");
+        //初始化上传控件
+        var spuImgUploader = WebUploader.create({
+            auto:false,
+            // swf文件路径
+            swf: '/webuploader/Uploader.swf',
+            // 文件接收路径
+            server: '/fileUpload',
+            // 选择文件的按钮。
+            pick: '#spuImgAdd',
+            // 不压缩image, 默认如果是jpeg，文件上传前会压缩一把再上传！
+            resize: false,
+            //设定文件大小上限 2M
+            fileSingleSizeLimit:2*1024*1024,
+            //可接受的文件类型
+            accept: {
+                title: 'Images',
+                extensions: 'gif,jpg,jpeg,bmp,png',
+                mimeTypes: 'image/*'
+            }
+        });
+        //用户选择文件后，表格需进行增行
+        spuImgUploader.on('fileQueued',function (file){
+            console.log("用户增加文件:"+file.id+'||'+file.name);
+            var row ={
+                fileId:file.id,
+                imgName:file.name,
+                progress:""
+            }
+            spuImgDg.datagrid('appendRow',row);
+        });
+        //上传过程中，该进度会反复触发
+        spuImgUploader.on( 'uploadProgress', function( file, percentage ) {
+            var rowIndex=spuImgDg.datagrid('getRowIndex',file.id);
+            var progessRow = { progress : (percentage*100).toFixed(2) };
+            spuImgDg.datagrid('updateRow', { index:rowIndex,row:progessRow });
         });
 
+        // 上传成功时，要把生成的图片路径返回给表格的行中的url
+        console.log("初始化文件上传控件的响应--uploadSuccess");
+        spuImgUploader.on( 'uploadSuccess', function( file ,response) {
+            console.log("上传完成："+file.id+"||"+response._raw);
+            var fileId=file.id;
+            var rowIndex = spuImgDg.datagrid('getRowIndex',file.id);//通过file.id查询到行号
+            spuImgDg.datagrid('updateRow',
+                {   index:rowIndex,
+                    row:{imgUrl:response._raw}
+                });
+        });
+        $('#spuImgUploadBtn').click(function(){
+            console.log("开始上传");
+            if(spuImgUploader.getFiles().length<=0){
+                $.messager().alert('警告','没有需要上传的文件','warning');
+                return;
+            }
+            spuImgUploader.upload();
+        });
+    }
+
+    // 初始化图片表格和datagrid整合
+    function initSpuImgListDatagrid(spuInfo) {
+        $('#spuImgDg').datagrid('loadData', {total: 0, rows: []});
+
+        spuImgDg = $("#spuImgDg").datagrid({
+            idField: 'fileId',    //标识行的主键  可以利用getRowIndex进行查询
+            columns: [[
+                {field: 'fileId', title: '文件编号', width: '15%'},//隐藏文件页面内部编号
+                {
+                    field: 'imgName', title: '图片简称', width: '20%'
+                },
+                {field: 'imgUrl', title: '图片路径', hidden: true},  //隐藏真实路径
+                {
+                    field: 'progress', title: '上传进度', width: '20%',
+                    formatter: function (value, row, index) {
+                        console.log("更新进度条！！" + value);
+                        if (!value) {
+                            value = 0;
+                        }
+                        var htmlstr =
+                            "<div class='easyui-progressbar progressbar' style='width:100px;height:20px;' value='" + value + "' text='" + value + "'%>" +
+                            "<div class='progressbar-text'  style='width: 100px; height: 20px; line-height: 20px;'>" + value + "%</div>" +
+                            "<div class='progressbar-value' style='width:" + value + "%; height: 20px; line-height: 20px;'>" +
+                            "<div class='progressbar-text' style='width: 100px; height: 20px; line-height: 20px;'>" + value + "%</div>" +
+                            "</div>" +
+                            "</div>";
+                        return htmlstr;
+                    }
+                },
+                {
+                    field: 'imgState', title: '上传状态', width: '20%',           //如果存在路径表示上传成功
+                    formatter: function (value, row, index) {
+                        console.log('row.imgUrl:' + row.imgUrl);
+                        if (row.imgUrl != undefined && row.imgUrl != '') {
+                            return '已上传';
+                        } else {
+                            return '等待上传';
+                        }
+                    }
+                }
+            ]],
+            view: detailview,
+            detailFormatter: function (rowIndex, rowData) {
+                return "<img src=" + rowData.imgUrl + " style='width:100px;height:100px;'>";
+            }
+        });
     }
 
     function initSpuSaleAttrListDatagrid() {
